...
            "state" : "translated",
            "value" : "血液型"
          }
        }
      }
    },
    "Check Fortune!" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "都道府県を占う！"
          }
...
            "state" : "translated",
            "value" : "%3$@民の日：%1$lld/%2$lld"
          }
        }
      }
    },
    "Enter your name" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "名前を入力してください"
          }
...
